--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
 click==7.1.2
+ConfigArgParse==1.4.1
 Flask==1.1.2
+Flask-BasicAuth==0.2.0
+gevent==21.1.2
+geventhttpclient==1.4.4
+greenlet==1.1.0
+idna==2.10
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+locust==1.5.3
 MarkupSafe==1.1.1
+msgpack==1.0.2
+packaging==20.9
+pluggy==0.13.1
+psutil==5.8.0
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+pyzmq==22.1.0
+requests==2.25.1
+six==1.16.0
+toml==0.10.2
+urllib3==1.26.5
 Werkzeug==1.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
