Add integration tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==21.2.0
+blinker==1.4
 certifi==2021.5.30
 chardet==4.0.0
 click==7.1.2
@@ -6,6 +7,7 @@ ConfigArgParse==1.4.1
 coverage==5.5
 Flask==1.1.2
 Flask-BasicAuth==0.2.0
+Flask-Testing==0.8.1
 gevent==21.1.2
 geventhttpclient==1.4.4
 greenlet==1.1.0
@@ -22,6 +24,7 @@ psutil==5.8.0
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
+python-dotenv==0.18.0
 pyzmq==22.1.0
 requests==2.25.1
 six==1.16.0
